H3 fix for #Mobile (Landscape) mode
H3 text (when breaking to more than one line) has too much line height.
Reduced line height and added margin to above and below to compensate.

Cudos to Jason Edelman @jasonedelman http://www.jasonedelman.com/ for
spotting this!

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -210,6 +210,7 @@ p,li{font-size:1.2em;line-height:1.5em;}
     #navigation{ display: none; }
     /* footer */
     footer { margin-top: 40px; }
+    h3{line-height:1.2em;margin:10px 0;}
 }
 /* #Mobile (Landscape) */
 /* Note: Design for a width of 480px */
@@ -238,6 +239,7 @@ p,li{font-size:1.2em;line-height:1.5em;}
     #copyright{ width: 420px; }
     /* header */
     #nav-logo { float: none; }
+
 }
 /* #Clearing */
 
